# cli-fpp

./: .gitignore  README.md
agent-harness/: pyproject.toml  setup.py
agent-harness/cli_fpp/: README.md  __init__.py  __main__.py  cli-manifest.json  cli.py  cli_openapi.py
agent-harness/cli_fpp/core/: __init__.py  agent_tools.py  commands.py  confirm.py  dev_target.py  doctor.py  effects.py  experience_contrib.py  experiences.py  fpp_docker.py  github_auth.py  gpio.py  guide.py  host_ssh.py  image_tools.py  media.py  media_intake.py  media_orientation.py  openapi_registry.py  overlays.py  player.py  playlist.py  project.py  schedule.py  sequence.py  system.py  target_catalog.py  target_setup.py  video_tools.py
agent-harness/cli_fpp/skills/: AGENT_ONBOARDING.md  SKILL.md  SKILL_EXPERIENCES.md  experiences_bundled.json
agent-harness/cli_fpp/tests/: TEST.md  test_agent_tools.py  test_core.py  test_dev_target.py  test_doctor.py  test_experience_contrib.py  test_experiences.py  test_fpp_docker.py  test_full_e2e.py  test_github_auth.py  test_guide.py  test_guide_campaign.py  test_host_ssh.py  test_media_intake.py  test_media_orientation.py  test_openapi.py  test_project_targets.py  test_target_catalog.py  test_target_setup.py
agent-harness/scripts/: build_api_wrap.py  build_skill_md.py  check_cmdline.py  check_fpp_flip.py  check_fpp_host.py  check_portrait_images.py  check_rotation_now.py  diag_display_config.py  diag_full.py  fix_fbcon.py  fix_portrait_fb.py  generate_cli_manifest.py  generate_experiences_skill.py  image_dims.py  merge_contributions.py  modetest_planes.txt  prepublish_check.py  probe_fpp_autostart.py  probe_fpp_autostart2.py  probe_planes.py  probe_rotation.py  probe_rotation2.py  read_fppd_log.py  research_fpp_rotation.py  research_fpp_rotation2.py  research_fpp_video.py  revert_fb_config.py  ssh_check.py  ssh_orangepi_display.py  ssh_orangepi_display2.py  stop_fpp.py  sync_skill_hooks.py  try_drm_rotate.py  try_rotate.py
examples/: README.md
(+16 files in other folders)
